--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,111 +16,12 @@
   }
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, Space Grotesk;
+.bw-layout {
+  @apply flex flex-col min-h-screen;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
-
-.layout {
-  height: 100vh;
-}
-
-#header {
-  display: flex;
-  justify-content:pace-between;
-  border-bottom: solid 1px #e4e4e4;
-}
-
-#logo {
-  min-width: 140px;
-}
-
-#menu {
-  font-family: Space Grotesk;
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0em;
-  justify-content: center;
-  border-bottom: none;
-}
-
-#menu .ant-menu-item-selected{
-  color: #040000;
-}
-
-#menu .ant-menu-item-selected:after{
-  color: #040000;
-  border-bottom: 2px solid #040000;
-}
-
-#menu .ant-menu-item-active{
-  color: #0020F4;
-}
-
-#menu .ant-menu-item-active:after{
-  color: #0020F4;
-  border-bottom: 2px solid #0020F4;
-}
-
-#avatar {
-  min-width: 140px;
-}
-.ant-layout-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#content {
-  font-family: Space Grotesk;
-  width: 280px;
-}
-
-#title{
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 32px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-
-#content text {
-  font-family: Space Grotesk;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-
-#content text strong{
-  font-family: Space Grotesk;
-  font-size: 12px;
-  font-weight: 900;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: left;
+.bw-content {
+  @apply flex-1;
 }
 
 #wallet {
@@ -129,7 +30,6 @@ a {
   width: 280px;
   border: none;
   border-radius: 7px;
-  font-family: Space Grotesk;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
@@ -146,9 +46,8 @@ a {
   color: #000;
 }
 
-#otherLogin button{
+#otherLogin button {
   border-bottom: solid 1px #e4e4e4;
-  font-family: Space Grotesk;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
@@ -156,14 +55,5 @@ a {
   text-align: left;
   height: 48px;
   width: 100%;
-}
-
-#otherLogin button .anticon{
-  vertical-align: middle;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-#otherLogin button:nth-last-child(1){
-  border-bottom: none ;
+  padding-left: 10px;
 }
