--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,7 @@
 :root {
   font-family: 'Space Grotesk', sans-serif;
   /** typography settings variable **/
-  /* --bw-h1-size: 40px;
+  --bw-h1-size: 40px;
   --bw-h1-weight: 700;
   --bw-h1-line-height: 48px;
   --bw-h2-size: 32px;
@@ -9,7 +9,7 @@
   --bw-h2-line-height: 40px;
   --bw-h3-size: 28px;
   --bw-h3-weight: 700;
-  --bw-h3-line-height: 36px; */
+  --bw-h3-line-height: 36px;
   --bw-h4-size: 24px;
   --bw-h4-weight: 500;
   --bw-h4-line-height: 32px;
@@ -30,9 +30,11 @@
 [data-theme='light'] {
   --bw-fr-color: #000;
   --bw-bg-color: #fff;
+  --bw-linear-welcome: linear-gradient(91.47deg, #fc9e1c 0%, #f62584 100%);
 }
 
 [data-theme='dark'] {
   --bw-fr-color: #fff;
   --bw-bg-color: #000;
+  --bw-linear-welcome: linear-gradient(91.47deg, #fc9e1c 0%, #f62584 100%);
 }
