--- a/src/styles/typ.css
+++ b/src/styles/typ.css
@@ -25,4 +25,8 @@
   .typ-body-small {
     @apply text-body_small font-body_small leading-body_small;
   }
+
+  .typ-label {
+    @apply text-label font-body_small leading-body_small;
+  }
 }
