add stats style & Mono type
mono type not works

--- a/src/styles/typ.css
+++ b/src/styles/typ.css
@@ -29,4 +29,8 @@
   .typ-label {
     @apply text-label font-body_small leading-body_small;
   }
+
+  .typ-number {
+    @apply text-body font-body_small leading-body font-mono;
+  }
 }
