--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,8 @@
 @import './global.css';
 @import './button.css';
 @import './typography.css';
+
+@import '../components/dialog/dialog.css';
 @import '../components/form/input/input.css';
 
 @import 'tailwindcss/utilities';
