--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
   body {
     min-height: 100%;
   }
-  #__next {
-    height: 100vh;
+  [data-nextjs-scroll-focus-boundary] {
+    @apply h-full;
   }
 }
