--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,6 @@
 @layer components {
-  html {
-    height: 100%;
-  }
   body {
-    min-height: 100%;
+    min-height: 100vh;
   }
   [data-nextjs-scroll-focus-boundary] {
     @apply h-full;
