--- a/src/components/form/input/input.css
+++ b/src/components/form/input/input.css
@@ -1,8 +1,8 @@
 @layer components {
   .input {
-    @apply block body-2 py-1 px-4 h-8 box-border border border-solid bg-white
-    rounded-md w-full  mr-4 transition duration-[.15s]
-    ease-in-out border-titanium text-black
+    @apply block body-3 h-9 px-4 box-border border border-solid border-titanium/30 bg-night
+    rounded-sm w-full  mr-4 transition duration-[.15s]
+    ease-in-out  text-white
     hover:border-gray-400 focus:border-gray-600 focus:outline-none;
     &[disabled] {
       @apply cursor-not-allowed pointer-events-none text-opacity-30 bg-gray-300;
