--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,12 +1,12 @@
 @layer components {
   .btn {
-    @apply inline-flex body-1 py-1 px-4 border border-solid rounded-md cursor-pointer w-auto h-8 box-border hover:brightness-90 transition duration-[.15s] ease-out;
+    @apply inline-flex items-center justify-center h-9 body-3  px-4 border border-solid rounded-sm cursor-pointer w-auto  box-border hover:brightness-90 transition duration-[.15s] ease-out;
   }
   .btn-primary {
-    @apply border-black bg-black text-white;
+    @apply border-day bg-day text-night;
   }
   .btn-secondary {
-    @apply border-black bg-white text-black;
+    @apply border-dream bg-dream text-white;
   }
   .btn-danger {
     @apply border-danger bg-white text-danger;
