update loading comp, navigator

--- a/src/components/form/control/control.css
+++ b/src/components/form/control/control.css
@@ -3,9 +3,9 @@
     @apply block body-3 py-2 px-2 box-border border border-solid border-titanium/20 bg-night
     rounded-sm w-full  mr-4 transition duration-[.15s]
     ease-in-out  text-white
-    hover:border-gray-400 focus:border-gray-400 focus:outline-none;
+    hover:border-gray-400 focus:border-day focus:outline-none;
     &[disabled] {
-      @apply cursor-not-allowed pointer-events-none text-opacity-30 bg-gray-300;
+      @apply cursor-not-allowed pointer-events-none bg-gray-400/10 text-gray-400/50;
     }
     &.error {
       @apply border-danger placeholder:text-danger;
