--- a/src/components/form/control/control.css
+++ b/src/components/form/control/control.css
@@ -1,9 +1,9 @@
 @layer components {
   .control {
-    @apply block body-3 py-2 px-2 box-border !border !border-solid !border-titanium/20 !bg-night
+    @apply block body-3 py-2 px-2 box-border !border !border-solid !border-[#1E293B] !bg-night
     rounded-sm w-full  mr-4 transition duration-[.15s]
     ease-in-out  text-white
-    hover:border-gray-400 focus:border-day focus:outline-none;
+    hover:!border-gray-400 focus:!border-day focus:outline-none;
     &[disabled] {
       @apply cursor-not-allowed pointer-events-none bg-gray-400/10 text-gray-400/50;
     }
