update font tertiary

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -53,12 +53,12 @@
   }
 
   .desc-1 {
-    @apply font-third text-[18px] leading-normal font-normal text-white;
+    @apply font-tertiary text-[18px] leading-normal font-normal text-white;
   }
   .desc-2 {
-    @apply font-third text-[16px] leading-normal font-normal text-white;
+    @apply font-tertiary text-[16px] leading-normal font-normal text-white;
   }
   .desc-3 {
-    @apply font-third text-[14px] leading-normal font-normal text-white;
+    @apply font-tertiary text-[14px] leading-normal font-normal text-white;
   }
 }
