--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -13,7 +13,7 @@
     }
   }
   .btn-primary-invert {
-    @apply border-day bg-night text-day  hover:border-[#00CCCC] rounded-none;
+    @apply border-day bg-night text-day  hover:border-transparent hover:bg-day rounded-none active:bg-[#00cccc] hover:text-night;
     &[disabled] {
       @apply border-[#006666]  text-[#94A3B8];
     }
