--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,11 +63,15 @@ body {
   }
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type="date"]::-webkit-calendar-picker-indicator,input[type="date"]::-moz-calendar-picker-indicator {
   opacity: 0;
   position: absolute;
   display: block;
   background-color: rgba(0, 0, 0, 0);
   width: 100%;
   height: 100%;
+}
+
+input[type='date'], input[type='time'] {
+  -webkit-appearance: none;
 }
