Update track section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,3 +42,36 @@
   -webkit-mask-composite: xor;
   mask-composite: exclude;
 }
+
+.prizeList2 {
+  margin: auto;
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  max-width: 240px;
+  min-width: 100px;
+  width: 20vw;
+  /* gap: 16px; */
+  align-items: center;
+  /* padding: 28px 20px; */
+  border-radius: 4px;
+  background: linear-gradient(to bottom, rgba(255,255,255,.08), rgba(255,255,255,.02));
+  color: #2bafff;
+/*  border width   */
+  --size: 1px;
+  --gradient: radial-gradient(200% 100% at 50% 0,rgba(255,255,255,.25),rgba(255,255,255,0.05));
+}
+
+.prizeList2::before {
+  z-index: 0;
+  position: absolute;
+  padding: var(--size);
+  border-radius: inherit;
+  background: var(--gradient);
+  content: "";
+  inset: 0;
+  -webkit-mask: linear-gradient(#000,#000) content-box,linear-gradient(#000,#000);
+  mask: linear-gradient(#000,#000) content-box,linear-gradient(#000,#000);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+}
