--- a/src/components/form/datepicker.css
+++ b/src/components/form/datepicker.css
@@ -7,10 +7,19 @@
   @apply font-secondary;
   background-color: var(--bgColor);
   border-color: #ffffff1a;
+  position: relative;
 }
 
 .react-datepicker * {
   color: white;
+}
+
+.react-datepicker__day--outside-month {
+  color: #ffffff80;
+}
+
+.react-datepicker__month {
+  height: 196px;
 }
 
 .react-datepicker,
@@ -38,7 +47,8 @@
 }
 
 .react-datepicker__day:hover,
-.react-datepicker__time-list-item:hover {
+.react-datepicker__time-list-item:hover,
+.react-datepicker__day--keyboard-selected {
   background-color: #ffffff33 !important;
   color: white !important;
 }
@@ -52,4 +62,9 @@
 .react-datepicker__time-container {
   border-left-color: #ffffff1a;
   box-sizing: content-box;
+}
+
+.react-datepicker__triangle {
+  transform: unset !important;
+  left: calc(50% + 4px) !important;
 }
