--- a/src/components/form/datepicker.css
+++ b/src/components/form/datepicker.css
@@ -15,7 +15,11 @@
 }
 
 .react-datepicker__day--outside-month {
-  color: #ffffff80;
+  color: #ffffff60;
+}
+
+.react-datepicker__day--disabled {
+  color: #ffffff20;
 }
 
 .react-datepicker__month {
@@ -26,6 +30,10 @@
 .react-datepicker__header,
 .react-datepicker__time-box {
   background-color: #1e293b;
+}
+
+.react-datepicker__triangle {
+  z-index: 10;
 }
 
 .react-datepicker__triangle::before {
